@@ -17,7 +17,7 @@ TODO for 0.29
 - Optional libgnome support? (POSTPONED)
 - Save on close dialog buttons (DONE)
 - Fix freehand (DONE)
-- Remove grab from buttons
+- Remove grab from buttons (DONE)
 
 TODO for 0.28
 =============
